fixed header on mobile

--- a/webs/src/components/Header/header.module.scss
+++ b/webs/src/components/Header/header.module.scss
@@ -7,7 +7,6 @@
   color: white;
   display: flex;
   justify-content: space-between;
-  padding: 0;
 }
 
 .alert {
